src/components/Button/style.scss
@import '../../styles/_main';

.Button {
  $_r: &;

  display: inline-block;
  width: 100%;
  padding: 0 32px;
  font-family: $font-primary;
  font-size: 18px;
  font-weight: 400;
  line-height: 52px;
  color: $c_white;
  text-align: center;
  cursor: pointer;
  background-color: $c_blue-ribbon;
  border: 4px solid transparent;

  &:hover,
  &:active {
    text-decoration: none;
    background-color: $c_han_purple;
  }

  &--reversed {
    color: $c_black;
    background-color: transparent;
    border-color: $c_blue-ribbon;

    &:hover,
    &:active {
      background-color: inherit;
    }
  }

  &--secondary {
    background-color: $c_blue-ribbon;

    &:hover,
    &:active {
      background-color: $c_han_purple;
    }

    &#{$_r}--reversed {
      color: $c_white;
      background-color: transparent;
      border-color: $c_blue-ribbon;
    }
  }

  &--large {
    padding: 0 30px;
    font-size: 22px;
    line-height: 72px;
  }

  &--light {
    color: $c_black;
    background-color: $c_white;

    &:hover,
    &:active {
      background-color: $c_silver;
    }
  }

  &--disabled {
    background-color: $c_blue-haze;

    &:hover,
    &:active {
      background-color: $c_blue-haze;
    }
  }

  @media #{$screen-sm} {
    width: auto;
  }

  @media #{$screen-md} {
    padding: 0 50px;
  }
}

